--- a/src/main/resources/local.properties
+++ b/src/main/resources/local.properties
@@ -27,9 +27,9 @@ runtimeDatabase=MYSQL
 
 #### JDBC database Configurations ####
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.URL=jdbc:mysql://127.0.0.1:3306/b3log_symphony?useUnicode=yes&characterEncoding=UTF-8
+jdbc.URL=jdbc:mysql://mysql:3306/b3log_symphony?useUnicode=yes&characterEncoding=UTF-8
 jdbc.username=root
-jdbc.password=
+jdbc.password=root123
 # database connection pool
 jdbc.pool=druid
 # The specific table name prefix
