--- a/src/main/resources/symphony.properties
+++ b/src/main/resources/symphony.properties
@@ -25,7 +25,7 @@
 #
 
 #### Key ####
-keyOfSymphony=dev_key
+keyOfSymphony=yungu
 
 #### Post ####
 minStepArticleTime=10000
@@ -246,7 +246,7 @@ turing.avatar=http://7xjz0r.com1.z0.glb.clouddn.com/robot_avatar.jpg
 #### XiaoV ####
 xiaov.enabled=false
 xiaov.api=http://hpxiaov.tunnel.qydev.com
-xiaov.key=dev_key
+xiaov.key=yungu
 
 #### Reserved ####
 reservedTags=Announcement,\u56DE\u6536\u7AD9
