--- a/src/main/resources/local.properties
+++ b/src/main/resources/local.properties
@@ -27,7 +27,7 @@ runtimeDatabase=MYSQL
 
 #### JDBC database Configurations ####
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.URL=jdbc:mysql://mysql:3306/b3log_symphony?useUnicode=yes&characterEncoding=UTF-8
+jdbc.URL=jdbc:mysql://192.168.31.51:3306/b3log_symphony?useUnicode=yes&characterEncoding=UTF-8
 jdbc.username=root
 jdbc.password=root123
 # database connection pool
